<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.nfd.literallyrunyourcode.RunInfoFragment"
                                             android:id="@+id/frameLayout">
    <TextView
            android:text="@string/distance_ran"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:id="@+id/distanceRanTextView"
            android:hint="@string/distance_ran"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/program_steps_run"
            android:layout_width="0dp"
            android:hint="@string/program_steps_run"
            android:layout_height="55dp"
            android:id="@+id/stepsRunTextView"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/distanceRanTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
            android:text="@string/distance_to_next_program_step"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/distance_to_next_program_step"
            android:id="@+id/distToNextTextView"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stepsRunTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
</android.support.constraint.ConstraintLayout>
